Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyExclusion__c/DeweyExclusion__c.object-meta.xml
<CustomObject>
    <description>Per-component rule exclusions. A matching exclusion suppresses a finding during analysis.</description>
    <label>Dewey Exclusion</label>
    <nameField>
        <displayFormat>EXC-{0000}</displayFormat>
        <label>Exclusion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dewey Exclusions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>