Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyExclusion__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <label>Component Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Exact name of the component to exclude (e.g. MyApexClass, MyFlow). Case-sensitive match against analyzer output.</description>
</CustomField>