Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyExclusion__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>Optional expiry date. When set, the exclusion is ignored after this date (checked by sf_config_service at load time).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>