Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyExclusion__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>TextArea</type>
    <description>Justification for this exclusion. Required for audit trail.</description>
</CustomField>