Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyExclusion__c/fields/RuleId__c.field-meta.xml
<CustomField>
    <fullName>RuleId__c</fullName>
    <description>References DeweyRule__c.RuleId__c. The exclusion applies to this rule for the specified component.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>